# simple_winapi_lib

./: Cargo.toml  README.md
src/: lib.rs  main.rs
